refactor to trading app
