# src/main/java/com/ariat/app/entity/AuthRequest.java
@@ -1,0 +1,13 @@
+package com.ariat.app.entity;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+public class AuthRequest {
+    private String username;
+    private String password;
+}
