# src/main/java/com/ariat/app/entity/AuthResponse.java
@@ -1,0 +1,12 @@
+package com.ariat.app.entity;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+public class AuthResponse {
+    private String token;
+}
